Views & Controllers - NewspaperSubscriptions & Header
Corregidos nombres debido al renombramiento de la entidad de Subscriptions a NewspaperSubscriptions

--- a/Acme-Newspaper/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Newspaper/src/main/webapp/views/master-page/messages_es.properties
@@ -17,7 +17,7 @@ master.page.profile.action.2		= Acción 2
 master.page.profile.action.3		= Acción 3
 master.page.profile.display			= Información de perfil
 
-master.page.subscription.mySubscriptions = Mis subscripciones
+master.page.newspaperSubscriptions.mySubscriptions = Mis subscripciones
 
 master.page.register				= Registrarse
 master.page.login 					= Entrar
