--- a/Acme-Newspaper/src/main/webapp/views/newspaperSubscription/messages_es.properties
+++ b/Acme-Newspaper/src/main/webapp/views/newspaperSubscription/messages_es.properties
@@ -6,24 +6,24 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-subscription.display                              = Mostrar
-subscription.newspaper.title                      = Título
-subscription.creditCard.number                    = Nº tarjeta crédito
-subscription.createANewspaper                     = Subscribirse a un periódico
-subscription.create                               = Crear
-subscription.cancel                               = Cancelar
+newspaperSubscription.display                              = Mostrar
+newspaperSubscription.newspaper.title                      = Título
+newspaperSubscription.creditCard.number                    = Nº tarjeta crédito
+newspaperSubscription.createANewspaper                     = Subscribirse a un periódico
+newspaperSubscription.create                               = Crear
+newspaperSubscription.cancel                               = Cancelar
 
-subscription.newspaper                            = Periódico
-subscription.creditCard.holderName                = Nombre del propietario
-subscription.creditCard.brandName                 = Marca
-subscription.creditCard.number                    = Número
-subscription.creditCard.expirationMonth           = Mes de expiración
-subscription.creditCard.expirationYear            = Año de expiración
-subscription.creditCard.cvv                       = CVV
+newspaperSubscription.newspaper                            = Periódico
+newspaperSubscription.creditCard.holderName                = Nombre del propietario
+newspaperSubscription.creditCard.brandName                 = Marca
+newspaperSubscription.creditCard.number                    = Número
+newspaperSubscription.creditCard.expirationMonth           = Mes de expiración
+newspaperSubscription.creditCard.expirationYear            = Año de expiración
+newspaperSubscription.creditCard.cvv                       = CVV
 
-subscription.commit.error							= No se pudo realizar la operación
+newspaperSubscription.commit.error						   = No se pudo realizar la operación
 
-service.edit.subscription.newspapers.notAvailable = No hay periódicos disponibles
+service.edit.newspaperSubscription.newspapers.notAvailable = No hay periódicos disponibles
 
-subscription.edit.creditCard.legend               = Tarjeta de crédito
-subscription.subscribe                            = Subscribirse
+newspaperSubscription.edit.creditCard.legend               = Tarjeta de crédito
+newspaperSubscription.subscribe                            = Subscribirse
