--- a/Acme-Newspaper/src/main/webapp/views/newspaperSubscription/messages.properties
+++ b/Acme-Newspaper/src/main/webapp/views/newspaperSubscription/messages.properties
@@ -6,24 +6,24 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-subscription.display                              = Display
-subscription.newspaper.title                      = Title
-subscription.creditCard.number                    = Credit card number
-subscription.createANewspaper                     = Subscribe a newspaper
-subscription.create                               = Create
-subscription.cancel                               = Cancel
+newspaperSubscription.display                              = Display
+newspaperSubscription.newspaper.title                      = Title
+newspaperSubscription.creditCard.number                    = Credit card number
+newspaperSubscription.createANewspaper                     = Subscribe a newspaper
+newspaperSubscription.create                               = Create
+newspaperSubscription.cancel                               = Cancel
 
-subscription.newspaper                            = Newspaper
-subscription.creditCard.holderName                = Holder name
-subscription.creditCard.brandName                 = Brand name
-subscription.creditCard.number                    = Number
-subscription.creditCard.expirationMonth           = Expiration month
-subscription.creditCard.expirationYear            = Expiration year
-subscription.creditCard.cvv                       = CVV
+newspaperSubscription.newspaper                            = Newspaper
+newspaperSubscription.creditCard.holderName                = Holder name
+newspaperSubscription.creditCard.brandName                 = Brand name
+newspaperSubscription.creditCard.number                    = Number
+newspaperSubscription.creditCard.expirationMonth           = Expiration month
+newspaperSubscription.creditCard.expirationYear            = Expiration year
+newspaperSubscription.creditCard.cvv                       = CVV
 
-subscription.commit.error							= Cannot commit this operation
+newspaperSubscription.commit.error						   = Cannot commit this operation
 
-service.edit.subscription.newspapers.notAvailable = No newspapers available
+service.edit.newspaperSubscription.newspapers.notAvailable = No newspapers available
 
-subscription.edit.creditCard.legend               = Credit card
-subscription.subscribe                            = Subscribe
+newspaperSubscription.edit.creditCard.legend               = Credit card
+newspaperSubscription.subscribe                            = Subscribe
