--- a/Acme-Newspaper/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Newspaper/src/main/webapp/views/master-page/messages.properties
@@ -19,7 +19,8 @@ master.page.profile.action.2		= Action 2
 master.page.profile.action.3		= Action 3
 master.page.profile.display			= Profile info
 
-master.page.newspaperSubscriptions.mySubscriptions = My subscriptions
+master.page.newspaperSubscriptions.mySubscriptions = My newspaper subscriptions
+master.page.volumeSubscriptions.mySubscriptions = My volume subscriptions
 
 master.page.register				= Register
 master.page.login 					= Login
