--- a/Acme-Newspaper/src/main/webapp/views/volumeSubscription/messages.properties
+++ b/Acme-Newspaper/src/main/webapp/views/volumeSubscription/messages.properties
@@ -6,3 +6,25 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
+volumeSubscription.display                        = Display
+volumeSubscription.title                          = Title
+volumeSubscription.creditCard.number              = Number
+volumeSubscription.volume.title                   = Title
+
+volumeSubscription.associatedNewspapers           = Associated newspapers
+volumeSubscription.createAVolumeSubscription      = Subscribe a volume
+volumeSubscription.volume.newspaper.title         = Title
+volumeSubscription.volume.newspaper.isPrivate     = Is private?
+volumeSubscription.volume.newspaper.isPrivate.yes = Yes
+volumeSubscription.volume.newspaper.isPrivate.no  = No
+volumeSubscription.volume.newspaper.showArticles  = Mostrar artículos
+
+volumeSubscription.creditCard.legend              = Credit card
+volumeSubscription.creditCard.holderName          = Holder name
+volumeSubscription.creditCard.brandName           = Brand name
+volumeSubscription.creditCard.number              = Number
+volumeSubscription.creditCard.expirationMonth     = Expiration month
+volumeSubscription.creditCard.expirationYear      = Expiration year
+volumeSubscription.creditCard.cvv                 = CVV
+
+volumeSubscription.cancel                         = Cancel
