--- a/Acme-Newspaper/src/main/webapp/views/advertisement/messages_es.properties
+++ b/Acme-Newspaper/src/main/webapp/views/advertisement/messages_es.properties
@@ -6,3 +6,54 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
+advertisement.title= Título
+
+advertisement.banner= URL del banner
+
+advertisement.target= URL de la página
+
+advertisement.edit=Editar
+
+advertisement.delete=Borrar
+
+advertisement.save=Guardar
+
+advertisement.create=Crear
+
+advertisement.cancel=Cancelar
+
+advertisement.creditcard=Tarjeta de crédito
+
+advertisement.creditCard.holder=Nombre del titular de la tarjeta
+
+advertisement.creditCard.brand=Nombre de la compañia de la tarjeta
+
+advertisement.creditCard.number=Número de la tarjeta
+
+advertisement.creditCard.month=Mes de expiración de la tarjeta
+
+advertisement.creditCard.year= Año de expiración de la tarjeta
+
+advertisement.creditCard.cvv = cvv
+
+#-----------------------------
+
+advertisement.error.null= El anuncio no tiene valor
+
+advertisement.error.null.indb= El anuncio no existe en la base de datos
+
+advertisement.error.null.banner= La URL del banner no tiene valor
+
+advertisement.error.null.title=El título no tiene valor
+
+advertisement.error.null.target=La URL de la página no tiene valor
+
+advertisement.error.null.newspaper=El periódico no tiene valor
+
+advertisement.error.null.agent=El agent no existe
+
+advertisement.error.creditcard=La fecha de la tarjeta de crédito no es válida
+
+advertisement.error.notagent=No hay agente 
+
+advertisement.error.badagent=Agente incorrecto
