AdvertisementAgentCotroller is full

--- a/Acme-Newspaper/src/main/webapp/views/advertisement/messages.properties
+++ b/Acme-Newspaper/src/main/webapp/views/advertisement/messages.properties
@@ -14,6 +14,8 @@ advertisement.target= Target page
 
 advertisement.edit=Edit
 
+advertisement.newspaper = Newspaper
+
 advertisement.delete=Delete
 
 advertisement.create=Create
@@ -57,3 +59,5 @@ advertisement.error.creditcard=Wrong date in credit card
 advertisement.error.notagent=There is not agent
 
 advertisement.error.badagent=Wrong agent
+
+advertisement.commit.error= Can not commit this operation
