--- a/Acme-Newspaper/src/main/webapp/views/advertisement/messages_es.properties
+++ b/Acme-Newspaper/src/main/webapp/views/advertisement/messages_es.properties
@@ -14,6 +14,8 @@ advertisement.target= URL de la página
 
 advertisement.edit=Editar
 
+advertisement.newspaper =Periódico
+
 advertisement.delete=Borrar
 
 advertisement.save=Guardar
@@ -57,3 +59,5 @@ advertisement.error.creditcard=La fecha de la tarjeta de crédito no es válida
 advertisement.error.notagent=No hay agente 
 
 advertisement.error.badagent=Agente incorrecto
+
+advertisement.commit.error= No se pudo realizar esa operación
