--- a/Acme-Newspaper/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Newspaper/src/main/webapp/views/master-page/messages_es.properties
@@ -44,3 +44,5 @@ master.page.chirp.user.listFollowed = Usuarios seguidos
 master.page.chirp.administrator.list  = Listar Chirps
 master.page.chirp.user.listFollowedChirps = Chirps de usuarios seguidos
 master.page.systemconfiguration.administrator.list= Configurar palabras tabú
+
+master.page.advertisement.myadvertisements=Mis anuncios
