--- a/Acme-Newspaper/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Newspaper/src/main/webapp/views/master-page/messages.properties
@@ -47,3 +47,5 @@ master.page.chirp.user.listFollowers= My followers
 master.page.chirp.user.listFollowed = Users followed
 master.page.chirp.user.listFollowedChirps = View followed' chirps
 master.page.systemconfiguration.administrator.list= Configure taboo words
+
+master.page.advertisement.myadvertisements=My advertisements
