--- a/Acme-Newspaper/src/main/webapp/views/article/messages_es.properties
+++ b/Acme-Newspaper/src/main/webapp/views/article/messages_es.properties
@@ -40,3 +40,6 @@ article.follow-up.noFollowUps       = No hay seguimientos
 article.publicationMoment.dateNotYetEstablished = Fecha no establecida
 article.KeyWord.filter = Buscar
 article.KeyWord = Palabra clave
+
+article.advertisement =Anuncio
+article.advertisement.noBannerUrl = No hay anuncios
