--- a/Acme-Newspaper/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Newspaper/src/main/webapp/views/master-page/messages.properties
@@ -49,3 +49,4 @@ master.page.chirp.user.listFollowedChirps = View followed' chirps
 master.page.systemconfiguration.administrator.list= Configure taboo words
 
 master.page.advertisement.myadvertisements=My advertisements
+master.page.advertisement.advertisements= Advertisements
