--- a/Acme-Newspaper/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Newspaper/src/main/webapp/views/master-page/messages_es.properties
@@ -46,3 +46,4 @@ master.page.chirp.user.listFollowedChirps = Chirps de usuarios seguidos
 master.page.systemconfiguration.administrator.list= Configurar palabras tabú
 
 master.page.advertisement.myadvertisements=Mis anuncios
+master.page.advertisement.advertisements= Anuncios
