--- a/Acme-Newspaper/src/main/webapp/views/system-configuration/messages.properties
+++ b/Acme-Newspaper/src/main/webapp/views/system-configuration/messages.properties
@@ -10,7 +10,7 @@ systemConfiguration.tabooWords	= Taboo words
 systemConfiguration.article.taboo	= Taboo articles
 systemConfiguration.newspaper.taboo	= Taboo newspapers
 systemConfiguration.chirp.taboo		= Taboo chirps
-
+systemConfiguration.advertisement.taboo=Taboo advertisements
 
 systemConfiguration.edit	= Edit
 systemConfiguration.save	= Save
