--- a/Acme-Newspaper/src/main/webapp/views/system-configuration/messages_es.properties
+++ b/Acme-Newspaper/src/main/webapp/views/system-configuration/messages_es.properties
@@ -6,10 +6,11 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-systemConfiguration.tabooWords	= Palabras taboo
-systemConfiguration.article.taboo	= Articulos taboo
-systemConfiguration.newspaper.taboo	= Periodicos taboo
-systemConfiguration.chirp.taboo		= Chirps taboo
+systemConfiguration.tabooWords	= Palabras tabú
+systemConfiguration.article.taboo	= Articulos tabú
+systemConfiguration.newspaper.taboo	= Periodicos tabú
+systemConfiguration.chirp.taboo		= Chirps tabú
+systemConfiguration.advertisement.taboo = Anuncios tabú
 
 systemConfiguration.edit	= Editar
 systemConfiguration.save	= Guardar
