--- a/Acme-Newspaper/src/main/webapp/views/newspaperSubscription/messages.properties
+++ b/Acme-Newspaper/src/main/webapp/views/newspaperSubscription/messages.properties
@@ -13,7 +13,12 @@ newspaperSubscription.createANewspaper                     = Subscribe a newspap
 newspaperSubscription.create                               = Create
 newspaperSubscription.cancel                               = Cancel
 
-newspaperSubscription.newspaper                            = Newspaper
+newspaperSubscription.newspaper.title                      = Title
+newspaperSubscription.newspaper.publicationDate            = Publication date
+newspaperSubscription.newspaper.description                = Description
+newspaperSubscription.newspaper.showArticles               = Show articles
+
+newspaperSubscription.newspaper                            = Subscribed newspaper
 newspaperSubscription.creditCard.holderName                = Holder name
 newspaperSubscription.creditCard.brandName                 = Brand name
 newspaperSubscription.creditCard.number                    = Number
