--- a/Acme-Newspaper/src/main/webapp/views/newspaperSubscription/messages_es.properties
+++ b/Acme-Newspaper/src/main/webapp/views/newspaperSubscription/messages_es.properties
@@ -12,8 +12,12 @@ newspaperSubscription.creditCard.number                    = Nº tarjeta crédito
 newspaperSubscription.createANewspaper                     = Subscribirse a un periódico
 newspaperSubscription.create                               = Crear
 newspaperSubscription.cancel                               = Cancelar
+newspaperSubscription.newspaper.title                      = Título
+newspaperSubscription.newspaper.publicationDate            = Fecha de publicación
+newspaperSubscription.newspaper.description                = Descripción
+newspaperSubscription.newspaper.showArticles               = Mostrar artículos
 
-newspaperSubscription.newspaper                            = Periódico
+newspaperSubscription.newspaper                            = Periódico suscrito
 newspaperSubscription.creditCard.holderName                = Nombre del propietario
 newspaperSubscription.creditCard.brandName                 = Marca
 newspaperSubscription.creditCard.number                    = Número
