--- a/Acme-Newspaper/src/main/webapp/views/message/messages.properties
+++ b/Acme-Newspaper/src/main/webapp/views/message/messages.properties
@@ -6,3 +6,23 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
+message.moment 		= Moment
+message.subject 	= Subject
+message.body 		= Body
+message.priority 	= Priority
+
+message.folder 		= Folder
+message.sender 		= Sender
+message.recipient 	= Recipient
+
+message.create		= Create message
+message.edit		= Edit
+message.save		= Save
+message.cancel		= Cancel
+
+message.message 	= Message
+message.messages 	= Messages
+
+message.commit.error 		= Cannot commit this operation
+
+message.error.message.null	= The message cannot be null
