--- a/Acme-Newspaper/src/main/webapp/views/message/messages_es.properties
+++ b/Acme-Newspaper/src/main/webapp/views/message/messages_es.properties
@@ -6,3 +6,23 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
+message.moment 		= Fecha
+message.subject 	= Tema
+message.body 		= Cuerpo
+message.priority 	= Prioridad
+
+message.folder 		= Carpeta
+message.sender 		= Emisor
+message.recipient 	= Destinatario
+
+message.create		= Crear mensaje
+message.edit		= Editar
+message.save		= Guardar
+message.cancel		= Cancelar
+
+message.message 	= Mensaje
+message.messages 	= Mensajes
+
+message.commit.error 		= No se pudo realizar la operación
+
+message.error.message.null	= El mensaje no puede ser nulo
