Move & delete messages and delele folders

--- a/Acme-Newspaper/src/main/webapp/views/folder/messages.properties
+++ b/Acme-Newspaper/src/main/webapp/views/folder/messages.properties
@@ -19,6 +19,7 @@ folder.create		= Create folder
 folder.edit			= Edit
 folder.save			= Save
 folder.cancel		= Cancel
+folder.delete		= Delete
 
 folder.folders		= Folders
 
@@ -27,5 +28,6 @@ folder.commit.error		= Cannot commit this operation
 message.error.folder.null			= The folder cannot be null
 message.error.folder.name.system	= The folder must not be a system folder
 message.error.folder.name.repeated	= The folder name must not be repeated
+message.error.folder.principal.owner	= Only the owner can edit or delete a folder
 
 message.error.folderForm.null			= The folder cannot be null
