--- a/Acme-Newspaper/src/main/webapp/views/folder/messages_es.properties
+++ b/Acme-Newspaper/src/main/webapp/views/folder/messages_es.properties
@@ -19,6 +19,7 @@ folder.create		= Crear carpeta
 folder.edit			= Editar
 folder.save			= Guardar
 folder.cancel		= Cancelar
+folder.delete		= Delete
 
 folder.folders		= Carpetas
 
@@ -27,5 +28,6 @@ folder.commit.error		= No se pudo realizar la operación
 message.error.folder.null			= La carpeta no puede ser nula
 message.error.folder.name.system	= La carpeta no puede ser una del sistema
 message.error.folder.name.repeated	= El nombre de la carpeta no puede estar repetido
+message.error.folder.principal.owner	= Solamente el propietario puede editar o borrar una carpeta
 
 message.error.folderForm.null		= La carpeta no puede ser nula
