--- a/Acme-Newspaper/src/main/webapp/views/message/messages.properties
+++ b/Acme-Newspaper/src/main/webapp/views/message/messages.properties
@@ -19,10 +19,14 @@ message.create		= Create message
 message.edit		= Edit
 message.save		= Save
 message.cancel		= Cancel
+message.delete		= Delete
 
 message.message 	= Message
 message.messages 	= Messages
 
 message.commit.error 		= Cannot commit this operation
 
-message.error.message.null	= The message cannot be null
+message.error.message.null						= The message cannot be null
+message.error.message.principal.owner			= Only the owner can edit the message
+message.error.messageForm.null					= The message cannot be null
+message.error.message.folder.principal.owner	= The new folder must be one from the principal
