--- a/Acme-Newspaper/src/main/webapp/views/message/messages_es.properties
+++ b/Acme-Newspaper/src/main/webapp/views/message/messages_es.properties
@@ -19,10 +19,14 @@ message.create		= Crear mensaje
 message.edit		= Editar
 message.save		= Guardar
 message.cancel		= Cancelar
+message.delete		= Borrar
 
 message.message 	= Mensaje
 message.messages 	= Mensajes
 
 message.commit.error 		= No se pudo realizar la operación
 
-message.error.message.null	= El mensaje no puede ser nulo
+message.error.message.null						= El mensaje no puede ser nulo
+message.error.message.principal.owner			= Solamente el dueño puede editar el mensaje
+message.error.messageForm.null					= El mensaje no puede ser nulo
+message.error.message.folder.principal.owner	= La nueva carpeta debe pertenecer al actor logueado
