--- a/Acme-Newspaper/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Newspaper/src/main/webapp/views/master-page/messages.properties
@@ -50,3 +50,6 @@ master.page.systemconfiguration.administrator.list= Configure taboo words
 
 master.page.advertisement.myadvertisements=My advertisements
 master.page.advertisement.advertisements= Advertisements
+
+master.page.newspaper.withadvertisement		= Newspapers with advertisements
+master.page.newspaper.withoutadvertisement	= Newspapers without advertisements
