--- a/Acme-Newspaper/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Newspaper/src/main/webapp/views/master-page/messages_es.properties
@@ -47,3 +47,6 @@ master.page.systemconfiguration.administrator.list= Configurar palabras tabú
 
 master.page.advertisement.myadvertisements=Mis anuncios
 master.page.advertisement.advertisements= Anuncios
+
+master.page.newspaper.withadvertisement		= Periódicos con anuncios
+master.page.newspaper.withoutadvertisement	= Periódicos sin anuncios
