--- a/Acme-Newspaper/src/main/webapp/views/newspaper/messages.properties
+++ b/Acme-Newspaper/src/main/webapp/views/newspaper/messages.properties
@@ -36,6 +36,7 @@ newspaper.articles.writer				= Writer
 newspaper.articles.summary				= Summary
 newspaper.moreInfo						= Information
 newspaper.notArticles					= There aren't articles
+newspaper.Advertisement					= List the newspaper with advertisements
 
 message.error.newspaper.user			= The logged user does not own this newspaper
 newspaper.commit.error					= Cannot commit this operation
