--- a/Acme-Newspaper/src/main/webapp/views/newspaper/messages_es.properties
+++ b/Acme-Newspaper/src/main/webapp/views/newspaper/messages_es.properties
@@ -36,6 +36,7 @@ newspaper.articles.summary				= Resumen
 newspaper.moreInfo						= Información
 newspaper.notArticles					= No hay artículos
 newspaper.publicationDate.null          = No publicado
+newspaper.Advertisement					= Lista los periódicos con anuncios
 
 message.error.newspaper.user			= El usuario no es el propietario de este periódico
 newspaper.commit.error					= No se puede realizar esta operación
