--- a/Acme-Newspaper/src/main/webapp/views/message/messages.properties
+++ b/Acme-Newspaper/src/main/webapp/views/message/messages.properties
@@ -16,6 +16,7 @@ message.sender 		= Sender
 message.recipient 	= Recipient
 
 message.create		= Create message
+message.broadcast	= Broadcast message
 message.edit		= Edit
 message.save		= Save
 message.cancel		= Cancel
