--- a/Acme-Newspaper/src/main/webapp/views/message/messages_es.properties
+++ b/Acme-Newspaper/src/main/webapp/views/message/messages_es.properties
@@ -16,6 +16,7 @@ message.sender 		= Emisor
 message.recipient 	= Destinatario
 
 message.create		= Crear mensaje
+message.broadcast	= Mensaje broadcast
 message.edit		= Editar
 message.save		= Guardar
 message.cancel		= Cancelar
