--- a/Acme-Newspaper/src/main/webapp/views/administrator/messages.properties
+++ b/Acme-Newspaper/src/main/webapp/views/administrator/messages.properties
@@ -51,6 +51,11 @@ administrator.avgNoArticlesPerPublicNewspapers	= The average number of articles 
 administrator.ratioOfSubscribersPerPrivateNewspaperVsTotalNumberOfCustomers	= The ratio of subscribers per private newspaper versus the total number of customers
 administrator.avgRatioOfPrivateVsPublicNewspaperPerPublisher	= The average ratio of private versus public newspapers per publisher
 
+administrator.ratioOfNewspapersWithAtLeastOneAdvertisementVsNewspapersWithNoOne = Ratio of Newspapers with at least one Advertisement versus Newspapers with no advertisement.
+administrator.ratioOfAdvertisementsWithTabooWords = Ratio of Advertisement with Taboo Words.
+administrator.avgNewspaperPerVolume = Average of Newspapers per Volume.
+administrator.ratioOfVolumeSubscriptionsVsNewspaperSubscription = Ratio of Subscription to Volumes versus Subscriptions to Newspapers.
+
 master.page.administrators	= Administrators
 
 admin.commit.error		= Cannot commit this operation
