--- a/Acme-Newspaper/src/main/webapp/views/administrator/messages_es.properties
+++ b/Acme-Newspaper/src/main/webapp/views/administrator/messages_es.properties
@@ -51,6 +51,12 @@ administrator.avgNoArticlesPerPublicNewspapers	= La media de articulos por perio
 administrator.ratioOfSubscribersPerPrivateNewspaperVsTotalNumberOfCustomers	= El ratio de de subscriptores por periodico privado frente al total de clientes
 administrator.avgRatioOfPrivateVsPublicNewspaperPerPublisher	= El ratio medio de periodicos privados frente a publicos por editor
 
+administrator.ratioOfNewspapersWithAtLeastOneAdvertisementVsNewspapersWithNoOne = Ratio de periodicos con al menos un anuncio frente a los que no tienen ninguno.
+administrator.ratioOfAdvertisementsWithTabooWords = Ratio de anuncios con palabras tabu.
+administrator.avgNewspaperPerVolume = Average de periodicos por volumen
+administrator.ratioOfVolumeSubscriptionsVsNewspaperSubscription = Ratio de suscripciones a volumenes frente a suscripciones a periodicos.
+
+
 master.page.administrators	= Administradores
 
 admin.commit.error		= No se pudo realizar esta operacion
