--- a/Acme-Newspaper/src/main/webapp/views/volume/messages.properties
+++ b/Acme-Newspaper/src/main/webapp/views/volume/messages.properties
@@ -6,3 +6,18 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
+
+
+
+
+volume.title						= Title
+volume.description					= Description
+volume.year							= Year
+volume.newspapers					= Newspapers
+volume.newspapersButton				= Show newspapers
+volume.noNewspapers					= No newspapers in this volumen
+
+volume.save							= Save
+volume.cancel						= Cancel
+volume.newspapers					= Newspapers
+volume.create						= Create a volume
