--- a/Acme-Newspaper/src/main/webapp/views/volume/messages_es.properties
+++ b/Acme-Newspaper/src/main/webapp/views/volume/messages_es.properties
@@ -6,3 +6,15 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
+
+
+volume.title						= Título
+volume.description					= Descripción
+volume.year							= Año
+volume.newspapers					= Periódicos
+volume.newspapersButton				= Mostrar periódicos
+volume.noNewspapers					= No hay periódicos en este volumen
+volume.save							= Guardar
+volume.cancel						= Cancelar
+volume.newspapers					= Periódicos
+volume.create						= Crear un volumen
