--- a/Acme-Newspaper/src/main/webapp/views/advertisement/messages.properties
+++ b/Acme-Newspaper/src/main/webapp/views/advertisement/messages.properties
@@ -40,24 +40,24 @@ advertisement.creditCard.cvv = cvv
 
 #-----------------------------
 
-advertisement.error.null=Null advertisement
+message.error.advertisement.null=Null advertisement
 
-advertisement.error.null.indb=There does not exist advertisement in data base
+message.error.advertisement.null.indb=There does not exist advertisement in data base
 
-advertisement.error.null.banner= Null URL banner
+message.error.advertisement.null.banner= Null URL banner
 
-advertisement.error.null.title= Null title
+message.error.advertisement.null.title= Null title
 
-advertisement.error.null.target= Null target page
+message.error.advertisement.null.target= Null target page
 
-advertisement.error.null.newspaper= Null newspaper
+message.error.advertisement.null.newspaper= Null newspaper
 
-advertisement.error.null.agent= Null agent
+message.error.advertisement.null.agent= Null agent
 
-advertisement.error.creditcard=Wrong date in credit card
+message.error.advertisement.creditcard=Wrong date in credit card
 
-advertisement.error.notagent=There is not agent
+message.error.advertisement.notagent=There is not agent
 
-advertisement.error.badagent=Wrong agent
+message.error.advertisement.badagent=Wrong agent
 
 advertisement.commit.error= Can not commit this operation
