--- a/Acme-Newspaper/src/main/webapp/views/advertisement/messages_es.properties
+++ b/Acme-Newspaper/src/main/webapp/views/advertisement/messages_es.properties
@@ -40,24 +40,24 @@ advertisement.creditCard.cvv = cvv
 
 #-----------------------------
 
-advertisement.error.null= El anuncio no tiene valor
+message.error.advertisement.null= El anuncio no tiene valor
 
-advertisement.error.null.indb= El anuncio no existe en la base de datos
+message.error.advertisement.null.indb= El anuncio no existe en la base de datos
 
-advertisement.error.null.banner= La URL del banner no tiene valor
+message.error.advertisement.null.banner= La URL del banner no tiene valor
 
-advertisement.error.null.title=El título no tiene valor
+message.error.advertisement.null.title=El título no tiene valor
 
-advertisement.error.null.target=La URL de la página no tiene valor
+message.error.advertisement.null.target=La URL de la página no tiene valor
 
-advertisement.error.null.newspaper=El periódico no tiene valor
+message.error.advertisement.null.newspaper=El periódico no tiene valor
 
-advertisement.error.null.agent=El agent no existe
+message.error.advertisement.null.agent=El agent no existe
 
-advertisement.error.creditcard=La fecha de la tarjeta de crédito no es válida
+message.error.advertisement.creditcard=La fecha de la tarjeta de crédito no es válida
 
-advertisement.error.notagent=No hay agente 
+message.error.advertisement.notagent=No hay agente 
 
-advertisement.error.badagent=Agente incorrecto
+message.error.advertisement.badagent=Agente incorrecto
 
 advertisement.commit.error= No se pudo realizar esa operación
