Add or remove newspapers to a volume

--- a/Acme-Newspaper/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Newspaper/src/main/webapp/views/master-page/messages.properties
@@ -33,12 +33,13 @@ master.page.cookies.message			= We use cookies own customisation in order to imp
 master.page.cookies.here			= Here
 master.page.cookies.ok				= I get it
 
+master.page.volumes					= Volumes
 master.page.create.article			= Write an article
 master.page.newspaper				= Newspapers
 master.page.newspaper.create		= Create a newspaper
 master.page.newspaper.user.list		= My newspapers
 master.page.newspaper.admin.list	= All newspapers
-
+master.page.volume.listMyVolumes		= My volumes
 master.page.list.ownArticles		= My articles
 
 master.page.chirp.user.list  		= My Chirps
