--- a/Acme-Newspaper/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Newspaper/src/main/webapp/views/master-page/messages_es.properties
@@ -36,6 +36,7 @@ master.page.newspaper.create		= Crear un periódico
 master.page.newspaper.user.list		= Mis periódicos
 master.page.newspaper.admin.list	= Todos los periódicos
 
+master.page.volumes					= Volúmenes
 master.page.list.ownArticles		= Mis artículos
 master.page.create.article			= Redactar un artículo
 master.page.chirp.user.list  		= Mis chirps
@@ -44,7 +45,7 @@ master.page.chirp.user.listFollowed = Usuarios seguidos
 master.page.chirp.administrator.list  = Listar Chirps
 master.page.chirp.user.listFollowedChirps = Chirps de usuarios seguidos
 master.page.systemconfiguration.administrator.list= Configurar palabras tabú
-
+master.page.volume.listMyVolumes		= Mis volúmenes
 master.page.advertisement.myadvertisements=Mis anuncios
 master.page.advertisement.advertisements= Anuncios
 
