--- a/Acme-Newspaper/src/main/webapp/views/newspaper/messages.properties
+++ b/Acme-Newspaper/src/main/webapp/views/newspaper/messages.properties
@@ -26,6 +26,8 @@ newspaper.notPublish					= Published
 newspaper.notArticles					= There aren't articles
 newspaper.publicationDate.null          = Not published
 
+newspaper.add							= add
+newspaper.addButton						= Add
 newspaper.delete						= Delete a newspaper
 newspaper.deleteButton					= Delete
 
