--- a/Acme-Newspaper/src/main/webapp/views/newspaper/messages_es.properties
+++ b/Acme-Newspaper/src/main/webapp/views/newspaper/messages_es.properties
@@ -38,6 +38,8 @@ newspaper.notArticles					= No hay artículos
 newspaper.publicationDate.null          = No publicado
 newspaper.Advertisement					= Lista los periódicos con anuncios
 
+newspaper.addButton						= Añadir
+newspaper.add							= Añadir
 message.error.newspaper.user			= El usuario no es el propietario de este periódico
 newspaper.commit.error					= No se puede realizar esta operación
 newspaper.delete.error					= No se puede borrar este periódico
