--- a/Acme-Newspaper/src/main/webapp/views/volume/messages.properties
+++ b/Acme-Newspaper/src/main/webapp/views/volume/messages.properties
@@ -17,7 +17,15 @@ volume.newspapers					= Newspapers
 volume.newspapersButton				= Show newspapers
 volume.noNewspapers					= No newspapers in this volumen
 
+volume.addNewspapers				= Add newspapers to a volume
+volume.deleteNewspapers				= Delete newspapers to a volume
+volume.notEditable					= Not editable
+volume.commit.error					= Cannot commit this operation
 volume.save							= Save
 volume.cancel						= Cancel
 volume.newspapers					= Newspapers
 volume.create						= Create a volume
+volume.edit							= Edit
+volume.newspapersSelectInfo			= Press ctrl for multiselect 
+volume.deleteLink					= Delete newspapers
+volume.addLink						= Add periódicos
