--- a/Acme-Newspaper/src/main/webapp/views/volume/messages_es.properties
+++ b/Acme-Newspaper/src/main/webapp/views/volume/messages_es.properties
@@ -18,3 +18,11 @@ volume.save							= Guardar
 volume.cancel						= Cancelar
 volume.newspapers					= Periódicos
 volume.create						= Crear un volumen
+volume.edit							= Editar
+volume.notEditable					= No editable
+volume.addNewspapers				= Añadir periódicos	a un volumen
+volume.deleteNewspapers				= Borrar periódicos de un volumen
+volume.commit.error					= No se pudo realizar la operación
+volume.newspapersSelectInfo			= Pulse ctrl para multiselección
+volume.deleteLink					= Borrar periódicos
+volume.addLink						= Añadir periódicos
