Views - NewspaperSubscription y VolumeSubscription

--- a/Acme-Newspaper/src/main/webapp/views/newspaperSubscription/messages.properties
+++ b/Acme-Newspaper/src/main/webapp/views/newspaperSubscription/messages.properties
@@ -15,10 +15,12 @@ newspaperSubscription.cancel                                  = Cancel
 
 newspaperSubscription.newspaper.title                         = Title
 newspaperSubscription.newspaper.publicationDate               = Publication date
+newspaperSubscription.publicationDate.pattern                 = MM/dd/yyyy HH:mm
 newspaperSubscription.newspaper.description                   = Description
 newspaperSubscription.newspaper.showArticles                  = Show articles
 
 newspaperSubscription.newspaper                               = Subscribed newspaper
+newspaperSubscription.creditCard.legend                       = Credit card information
 newspaperSubscription.creditCard.holderName                   = Holder name
 newspaperSubscription.creditCard.brandName                    = Brand name
 newspaperSubscription.creditCard.number                       = Number
