--- a/Acme-Newspaper/src/main/webapp/views/newspaperSubscription/messages_es.properties
+++ b/Acme-Newspaper/src/main/webapp/views/newspaperSubscription/messages_es.properties
@@ -14,10 +14,12 @@ newspaperSubscription.create                                  = Crear
 newspaperSubscription.cancel                                  = Cancelar
 newspaperSubscription.newspaper.title                         = Título
 newspaperSubscription.newspaper.publicationDate               = Fecha de publicación
+newspaperSubscription.publicationMoment.pattern               = dd/MM/yyyy HH:mm
 newspaperSubscription.newspaper.description                   = Descripción
 newspaperSubscription.newspaper.showArticles                  = Mostrar artículos
 
 newspaperSubscription.newspaper                               = Periódico suscrito
+newspaperSubscription.creditCard.legend                       = Información de la tarjeta de crédito
 newspaperSubscription.creditCard.holderName                   = Nombre del propietario
 newspaperSubscription.creditCard.brandName                    = Marca
 newspaperSubscription.creditCard.number                       = Número
