--- a/Acme-Newspaper/src/main/webapp/views/volumeSubscription/messages_es.properties
+++ b/Acme-Newspaper/src/main/webapp/views/volumeSubscription/messages_es.properties
@@ -6,25 +6,26 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-volumeSubscription.display                        = Mostrar
-volumeSubscription.title                          = Título
-volumeSubscription.creditCard.number              = Número
-volumeSubscription.volume.title                   = Título
+volumeSubscription.display                          = Mostrar
+volumeSubscription.title                            = Título
+volumeSubscription.creditCard.number                = Número
+volumeSubscription.volume.title                     = Título
 
-volumeSubscription.associatedNewspapers           = Periódicos asociados
-volumeSubscription.createAVolumeSubscription      = Suscribirse a un volumen
-volumeSubscription.volume.newspaper.title         = Título
-volumeSubscription.volume.newspaper.isPrivate     = ¿Es privado?
-volumeSubscription.volume.newspaper.isPrivate.yes = Sí
-volumeSubscription.volume.newspaper.isPrivate.no  = No
-volumeSubscription.volume.newspaper.showArticles  = Mostrar artículos
+volumeSubscription.associatedNewspapers             = Periódicos asociados
+volumeSubscription.createAVolumeSubscription        = Suscribirse a un volumen
+volumeSubscription.volume.newspaper.title           = Título
+volumeSubscription.volume.newspaper.isPrivate       = ¿Es un periódico bajo suscripción?
+volumeSubscription.volume.newspaper.isPrivate.yes   = Sí
+volumeSubscription.volume.newspaper.isPrivate.no    = No
+volumeSubscription.volume.newspaper.showArticles    = Mostrar artículos
 
-volumeSubscription.creditCard.legend              = Tarjeta de crédito
-volumeSubscription.creditCard.holderName          = Holder name
-volumeSubscription.creditCard.brandName           = Brand name
-volumeSubscription.creditCard.number              = Number
-volumeSubscription.creditCard.expirationMonth     = Expiration month
-volumeSubscription.creditCard.expirationYear      = Expiration year
-volumeSubscription.creditCard.cvv                 = CVV
+volumeSubscription.creditCard.legend                = Información de la tarjeta de crédito
+volumeSubscription.creditCard.holderName            = Holder name
+volumeSubscription.creditCard.brandName             = Brand name
+volumeSubscription.creditCard.number                = Number
+volumeSubscription.creditCard.expirationMonth       = Expiration month
+volumeSubscription.creditCard.expirationYear        = Expiration year
+volumeSubscription.creditCard.cvv                   = CVV
 
-volumeSubscription.cancel                         = Cancelar
+volumeSubscription.cancel                           = Cancelar
+service.edit.volumeSubscription.volume.notAvailable = No hay volumenes disponibles
