Volume list & edit fixes

--- a/Acme-Newspaper/src/main/webapp/views/volume/messages.properties
+++ b/Acme-Newspaper/src/main/webapp/views/volume/messages.properties
@@ -28,4 +28,4 @@ volume.create						= Create a volume
 volume.edit							= Edit
 volume.newspapersSelectInfo			= Press ctrl for multiselect 
 volume.deleteLink					= Delete newspapers
-volume.addLink						= Add periódicos
+volume.addLink						= Add newspaper
