Views - NewspaperSubscription y VolumeSubscription

--- a/Acme-Newspaper/src/main/webapp/views/newspaperSubscription/messages.properties
+++ b/Acme-Newspaper/src/main/webapp/views/newspaperSubscription/messages.properties
@@ -28,6 +28,8 @@ newspaperSubscription.creditCard.expirationMonth              = Expiration month
 newspaperSubscription.creditCard.expirationYear               = Expiration year
 newspaperSubscription.creditCard.cvv                          = CVV
 
+message.error.newspaperSubscription.itsAlreadySubscribed      = It's already suscribed to this newspaper
+
 message.error.newspaperSubscription.null                      = Newspaper subscription can't be null
 message.error.newspaperSubscription.invalidCreditCard         = Invalid credit card 
 message.error.newspaperSubscription.isPublicNewspaper         = The newspaper is public
