--- a/Acme-Newspaper/src/main/webapp/views/newspaperSubscription/messages_es.properties
+++ b/Acme-Newspaper/src/main/webapp/views/newspaperSubscription/messages_es.properties
@@ -27,6 +27,8 @@ newspaperSubscription.creditCard.expirationMonth              = Mes de expiració
 newspaperSubscription.creditCard.expirationYear               = Año de expiración
 newspaperSubscription.creditCard.cvv                          = CVV
 
+message.error.newspaperSubscription.itsAlreadySubscribed      = Ya está suscrito a este periódico
+
 message.error.newspaperSubscription.null                      = La suscription al periódico no puede ser nula
 message.error.newspaperSubscription.invalidCreditCard         = Tarjeta de crédito inválida
 message.error.newspaperSubscription.isPublicNewspaper         = El periódico es público
