--- a/Acme-Newspaper/src/main/webapp/views/volumeSubscription/messages.properties
+++ b/Acme-Newspaper/src/main/webapp/views/volumeSubscription/messages.properties
@@ -12,6 +12,7 @@ volumeSubscription.creditCard.number                = Number
 volumeSubscription.volume.title                     = Title
 
 volumeSubscription.associatedNewspapers             = Associated newspapers
+volumeSubscription.volume                           = Volume
 volumeSubscription.createAVolumeSubscription        = Subscribe a volume
 volumeSubscription.volume.newspaper.title           = Title
 volumeSubscription.volume.newspaper.isPrivate       = Is it a newspaper under subscription?
@@ -27,5 +28,15 @@ volumeSubscription.creditCard.expirationMonth       = Expiration month
 volumeSubscription.creditCard.expirationYear        = Expiration year
 volumeSubscription.creditCard.cvv                   = CVV
 
+message.error.volumeSubscription.itsAlreadySubscribed = Ya está suscrito a este volumen
+
+message.error.volumeSubscription.null                      = La suscription al periódico no puede ser nula
+message.error.volumeSubscription.invalidCreditCard         = Tarjeta de crédito inválida
+message.error.volumeSubscription.customer.null             = El cliente no puede ser nulo
+message.error.volumeSubscription.isNotTheSameCustomer      = No es el mismo cliente
+
+volumeSubscription.commit.error					           = No se pudo realizar la operación
+
 volumeSubscription.cancel                           = Cancel
 service.edit.volumeSubscription.volume.notAvailable = No volumes available
+volumeSubscription.subscribe                        = Subscribe
