--- a/Acme-Newspaper/src/main/webapp/views/volumeSubscription/messages_es.properties
+++ b/Acme-Newspaper/src/main/webapp/views/volumeSubscription/messages_es.properties
@@ -12,6 +12,7 @@ volumeSubscription.creditCard.number                = Número
 volumeSubscription.volume.title                     = Título
 
 volumeSubscription.associatedNewspapers             = Periódicos asociados
+volumeSubscription.volume                           = Volumen
 volumeSubscription.createAVolumeSubscription        = Suscribirse a un volumen
 volumeSubscription.volume.newspaper.title           = Título
 volumeSubscription.volume.newspaper.isPrivate       = ¿Es un periódico bajo suscripción?
@@ -27,5 +28,8 @@ volumeSubscription.creditCard.expirationMonth       = Expiration month
 volumeSubscription.creditCard.expirationYear        = Expiration year
 volumeSubscription.creditCard.cvv                   = CVV
 
+message.error.volumeSubscription.itsAlreadySubscribed = It's already subscribe to this volume
+
 volumeSubscription.cancel                           = Cancelar
 service.edit.volumeSubscription.volume.notAvailable = No hay volumenes disponibles
+volumeSubscription.subscribe                        = Subscribirse
